# JNITest

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/jnitest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  TestStatic2.cpp  native-lib.cpp  static-lib.cpp
app/src/main/cpp/shared/: main-jni.cpp
app/src/main/cpp/shared/include/: TestStatic1.h
app/src/main/cpp/testStatic/: TestStatic1.cpp
app/src/main/cpp/testStatic/include/: TestStatic2.h
app/src/main/java/com/example/jnitest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
